$Id$

0.7.1beta
	- Database connection interface changed, new configuration
	  options DB_DSN,DB_USER,DB_PASSWORD are now used instead of
	  old DB_CONNECT.
	- CGI interface: added enable/disable buttons for easy
	  togling between host and host reservation
	- CGI interface: added ability to search by date(ranges)
	  (by host creation/modification and last dhcp lease)
	- CGI interface: now advertises "Save Defaults" command to
	  users without saved defaults
	- CGI interface: added ability to search by asset IDs
	- initial "plugin" support for CGI interface 
	  (one sample/test plugin provided as an example)
	- new command "Clear Defaults" in web interface
	  patch by Michael S. Liebman <m-liebman@northwestern.edu>
	- status command now detecs also zone/server changes
	  (previously only host changes were detected)
	- import-dhcp: support for multiple host entries with same
	  MAC and fixes to MAC address parsing  
	  by Spencer H Visick <visick@eng.utah.edu>
	- update-dhcp-info: now supports also logfiles generated by
	  Solaris syslogd
	- now returns all results when using "Download results in CVS format"
	  option when searching hosts 
	- new configuration option SAURON_HINFO_MODE to set the
	  behaviour of (host) HINFO fields when adding/editing hosts
	  (see config.in for more info)
	- primary and slave zone pathnames can now automatically
	  be "hashed" by the first letter(s) of zone name, by
	  using special tag %N in "Primary zone-file path" and/or
	  "Slave zone-file path" fields in server settings.
	- database format changes (1.2):
	   - settings: renamed column 'key' --> 'setting'
	   - nets: new columnd 'dummy'
	   - servers: new column 'lastrun'
	   - hosts: new column 'email'
	- new configuration valiablre SAURON_CHR that allows
          limiting what can be used in some host record
	  fields (dept,location,asset_id) by server and by
	  user group
	- VLAN names now can be in mixed-case (before only 
	  lower-case was allowed)